@@ -4,11 +4,11 @@
 
 TracePoint::TracePoint(const AIRCRAFT_STATE &state):
   SearchPoint(state.Location),
-  ALTITUDE_STATE(state),
-  VARIO_STATE(state),
   time((int)state.Time),
   last_time(UINT_MAX),
-  drift_factor(state.thermal_drift_factor())
+  drift_factor(state.thermal_drift_factor() * 256),
+  altitude(state.NavAltitude),
+  vario(state.NettoVario * 256)
 {
 }
 
